--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 
 /* Variables CSS */
 
+
 :root {
   --primary-color: #C0D8C1;
   --white-color: #FFFFFF;
@@ -139,33 +140,43 @@ ul {
 .intro__body {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 30px 0;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .intro__content {
-  max-width: 500px;
-  width: 100%;
-  padding-right: 20px;
+  text-align: center;
 }
 
 .intro__img {
-  max-width: 350px;
-  width: 80%;
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+.intro__btn {
+  margin-top: 20px; /* Adjust as needed */
 }
 
 .intro__img img {
-  display: block;
-  width: 100%;
-  border-top-left-radius: 20%;
-  border-top-right-radius: 20%;
-  border-bottom-left-radius: 20%;
-  border-bottom-right-radius: 20%;
+  width: 340px; 
+  height: 360px; 
+  border-radius: 50%; 
+  margin-bottom: 20px; 
+  object-fit: cover;
+}
+
+.intro-soc {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; 
+}
+
+.intro-soc__item {
+  margin: 0 10px; 
 }
 
 .intro__title {
   font-weight: 600;
-  font-size: 64px;
+  font-size: 40px;
   line-height: 1.2;
   color: var(--text-color);
   margin-bottom: 10px;
@@ -215,17 +226,6 @@ ul {
   background: var(--primary-color);
   color: var(--white-color);
   transform: scale(1.05);
-}
-
-.intro-soc {
-  display: flex;
-  margin: 0 -10px;
-  margin-top: 40px;
-  align-items: center;
-}
-
-.intro-soc__item {
-  padding: 0 10px;
 }
 
 .intro-soc__link {
